--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PetSpaManage</title>
+    <title><% t ".PetSpaManage" %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,8 +10,10 @@
     <%= javascript_include_tag "application",
                                "data-turbolinks-track": "reload" %>
   </head>
-
-  <body>
+  <div class="container">
+    <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% end %>
     <%= yield %>
-  </body>
+  </div>
 </html>
