--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,8 @@
 <% provide(:title, t(".all_users")) %>
 <h1><%= t ".all_users" %></h1>
+
+<ul class="users">
+  <%= render @users %>
+</ul>
+
+<%= paginate @users %>
