--- a/app/views/static_pages/_service.html.erb
+++ b/app/views/static_pages/_service.html.erb
@@ -14,7 +14,7 @@
                 <img width="270" height="270" src="asset/uploads/2018/01/pet_store_dog_01.jpg" class="attachment-270x270 size-270x270 wp-post-image" alt="" sizes="(max-width: 270px) 100vw, 270px">
                 <div class="product-info">
                     <h3 class="title18 text-uppercase product-title dosis-font font-bold">
-                      <a title="Meela" href="../product/meela/index.html" class="black">Nesty</a>
+                      <a title="Meela" href="" class="black">Nesty</a>
                     </h3>
                     <p class="white">hoang thi lien hoang thi lien hoang thi lien hoang thi lien hoang thi lien hoang thi lien hoang thi lien </p>
                     <div class="product-price simple"><del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">$</span>100$</span></del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">$</span>90</span></ins></div>
