--- a/app/views/static_pages/_header.html.erb
+++ b/app/views/static_pages/_header.html.erb
@@ -40,12 +40,27 @@
             <li id="nav-menu-item-836" class="main-menu-item  menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page">
               <%= link_to t(".contact_us"), "#", class: "menu-link sub-menu-link" %>
             </li>
-            <li id="nav-menu-item-836" class="main-menu-item  menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page">
-              <%= link_to t(".register"), "#" %>
-            </li>
-            <li id="nav-menu-item-836" class="main-menu-item  menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page">
-              <%= link_to t(".login"), "#" %>
-            </li>
+            <% if logged_in? %>
+              <li><% if current_user.admin %><%= link_to t(".users"), users_path %><% end %></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <%= t ".account" %><b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to t(".profile"), current_user %></li>
+                  <li><%= link_to t(".settings"), edit_user_path(current_user) %></li>
+                  <li class="divider"></li>
+                  <li>
+                    <%= link_to t(".log_out"), logout_path, method: :delete %>
+                  </li>
+                </ul>
+              </li>
+            <% else %>
+              <li id="nav-menu-item-836" class="main-menu-item  menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page">
+                  <%= link_to t(".register"), signup_path %>
+              </li>
+              <li><%= link_to t(".log_in"), login_path %></li>
+            <% end %>
           </ul>
           <a href="#" class="toggle-mobile-menu"><span></span></a>
         </nav>
