--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,8 @@
 <li>
   <%= gravatar_for user, Settings.size_gravatar %>
   <%= link_to user.name, user %>
+  <% if current_user.admin && !current_user?(user) %>
+    | <%= link_to t(".delete"), user, method: :delete,
+                                  data: { confirm: t(".you_sure") } %>
+  <% end %>
 </li>
