--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -32,9 +32,8 @@
               <td><%= comment.content %></td>
               <td><%= comment.created_at %></td>
               <td>
-                <%= link_to t(".delete"), admin_comment_path(comment.id) ,
-                method: :delete, class: "btn btn-danger",
-                data: {confirm: t(".confirm")} %>
+                <%= link_to t(".delete"), admin_comment_path(comment.id),
+                method: :delete, data: {confirm: t(".confirm")}, class: "btn btn-danger" %>
               </td>
             </tr>
             <% end %>
