show data in homepage

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,7 +7,7 @@
   margin-bottom: 0px !important;
 }
 .vc_row.wpb_row.block-product2 {
-    height: 400px;
+    height: 500px;
 }
 ul#side-menu, nav.navbar.navbar-default.navbar-static-top  {
     display: block;
@@ -17,4 +17,27 @@ form.search {
 }
 a.btn-create{
   margin-bottom: 20px;
+}
+.owl-item.active {
+  display: flex;
+}
+.service .item {
+  width: 30%;
+  margin: 10px;
+}
+.product-thumb a {
+  color: aqua;
+}
+.vc_column-inner.blogs {
+  display: flex;
+}
+.owl-item.active {
+  margin-left: 15px;
+}
+.product-slider {
+  display: flex;
+}
+.post-716.product {
+  width: 30%;
+  margin-left: 10px;
 }
