--- a/app/views/static_pages/_header.html.erb
+++ b/app/views/static_pages/_header.html.erb
@@ -7,15 +7,15 @@
             <div class="wpb_wrapper">
               <div class="logo logo-text">
                 <div class="text-logo">
-                  <a href="{{ route('home.index') }}">
+                  <%= link_to root_path do %>
                     <ul class="list-inline-block">
-                      <li><img class="alignnone size-full wp-image-870" src="{{ asset('asset/uploads/2018/01/logo-2.png') }}" alt="" width="51" height="46" /></li>
+                      <li><%= image_tag "logo-1.png" %></li>
                       <li>
                         <h1 class="title30 dosis-font text-uppercase font-bold white">Haustiere</h1>
                         <h2 class="title24 gab-font white opaci">we sell real friends</h2>
                       </li>
                     </ul>
-                  </a>
+                    <% end %>
                 </div>
               </div>
             </div>
@@ -26,22 +26,22 @@
               <div class="wpb_wrapper">
                 <nav class="main-nav  main-nav1 ">
                   <ul id="menu-main-menu" class="list-none">
-                    <li id="nav-menu-item-826" class="main-menu-item  menu-item-even menu-item-depth-0 menu-item menu-item-type-custom menu-item-object-custom menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children">
-                      <%= link_to t(".home"), "#", class: "menu-link sub-menu-link" %>
-                    <li id="nav-menu-item-831" class="main-menu-item  menu-item-even menu-item-depth-0 menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
-                      <%= link_to t(".services"), "#", class: "menu-link sub-menu-link" %>
+                    <li id="nav-menu-item-826" class="main-menu-item">
+                      <%= link_to t(".home"), root_path, class: "menu-link sub-menu-link" %>
+                    <li id="nav-menu-item-831" class="main-menu-item">
+                      <%= link_to t(".services"), services_path, class: "menu-link sub-menu-link" %>
                   </li>
-                  <li id="nav-menu-item-829" class="main-menu-item  menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children">
-                    <%= link_to t(".blogs"), "#", class: "menu-link sub-menu-link" %>
+                  <li id="nav-menu-item-829" class="main-menu-item">
+                    <%= link_to t(".posts"), posts_path, class: "menu-link sub-menu-link" %>
               </li>
-              <li id="nav-menu-item-836" class="main-menu-item  menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page">
+              <li id="nav-menu-item-836" class="main-menu-item">
                 <%= link_to t(".about_us"), "#", class: "menu-link sub-menu-link" %>
               </li>
-            <li id="nav-menu-item-836" class="main-menu-item  menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page">
+            <li id="nav-menu-item-836" class="main-menu-item">
               <%= link_to t(".contact_us"), "#", class: "menu-link sub-menu-link" %>
             </li>
             <% if logged_in? %>
-              <li><% if current_user.admin %><%= link_to t(".users"), users_path %><% end %></li>
+              <li><% if current_user.admin? %><%= link_to t(".users"), users_path %><% end %></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <%= t ".account" %><b class="caret"></b>
