--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <%= render "static_pages/hot_blog" %>
 <div class="container">
-  <%= render "static_pages/service" %>
-  <%= render "static_pages/blogs" %>
+  <%= render "services/service_home" %>
+  <%= render "posts/post_home" %>
 </div>
