--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -44,7 +44,7 @@
             </div>
             <div class="product-info">
               <h3 class="title18 text-uppercase product-title dosis-font font-bold">
-                <%= link_to other_posts.title, service_url(other_posts) %>
+                <%= link_to other_posts.title, post_url(other_posts) %>
               </h3>
               <div class="product-price simple"><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">$</span><%= other_posts.sumary %></span></div>
             </div>
