--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -15,10 +15,7 @@
     <%= link_to t(".likes"), "#" %>
   </li>
   <li>
-    <%= link_to t(".pets"), "#" %>
-  </li>
-  <li>
-    <%= link_to t(".services"), "#" %>
+    <%= link_to t(".services"), admin_services_url %>
   </li>
   <li>
     <%= link_to t(".orders"), "#" %>
