--- a/app/views/admin/services/edit.html.erb
+++ b/app/views/admin/services/edit.html.erb
@@ -1,13 +1,19 @@
 <% provide :title, t(".title") %>
 <div class="col-md-8">
   <%= form_for [:admin, @service], class: "nifty_form" do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :status %>
-  <%= f.select :status, options_for_select([t(".public"), t(".pending")],
-    {:selected => @service.status}) %>
-  <%= f.text_field :price %>
-  <%= f.text_field :description %>
-  <%= f.submit t(".update"), class: "col-md-3 btn btn-success" %>
-<% end %>
+    <%= render "shared/error_messages", object: f.object %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    <%= f.label :status %>
+    <%= f.select :status, options_for_select(show_status,
+      {selected: @service.status}) %>
+    <%= f.label :price %>
+    <%= f.text_field :price %>
+    <%= f.label :picture %>
+    <%= f.file_field :picture, accept: "image/jpeg,image/gif,image/png",
+      class: "picture" %>
+    <%= f.label :description %>
+    <%= f.text_field :description %>
+    <%= f.submit t(".update"), class: "col-md-3 btn btn-success" %>
+  <% end %>
 </div>
