--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -9,6 +9,9 @@
     <%= link_to t(".posts"), admin_posts_path %>
   </li>
   <li>
+    <%= link_to t(".pets"), admin_pets_path %>
+  </li>
+  <li>
       <%= link_to t(".comments"), admin_comments_path %>
   </li>
   <li>
