--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,8 +10,14 @@
       <%= f.label :name %>
       <%= f.text_field :name, class: "form-control" %>
 
+      <%= f.label :phone %>
+      <%= f.text_field :phone, class: "form-control" %>
+
       <%= f.label :email %>
       <%= f.email_field :email, class: "form-control" %>
+
+      <%= f.label :address %>
+      <%= f.text_field :address, class: "form-control" %>
 
       <%= f.label :password %>
       <%= f.password_field :password, class: "form-control" %>
