--- a/app/views/static_pages/_header.html.erb
+++ b/app/views/static_pages/_header.html.erb
@@ -1,70 +1,73 @@
 <header id="header" class="header-page">
-  <div class="vc_row-full-width vc_clearfix"></div>
-    <div data-vc-full-width="true" data-vc-full-width-init="false" class="vc_row wpb_row main-header bg-color main-header2">
-      <div class="container">
-        <div class="wpb_column column_container col-sm-12 col-md-3">
-          <div class="vc_column-inner ">
-            <div class="wpb_wrapper">
-              <div class="logo logo-text">
-                <div class="text-logo">
-                  <%= link_to root_path do %>
-                    <ul class="list-inline-block">
-                      <li><%= image_tag "logo-1.png" %></li>
-                      <li>
-                        <h1 class="title30 dosis-font text-uppercase font-bold white">Haustiere</h1>
-                        <h2 class="title24 gab-font white opaci">we sell real friends</h2>
-                      </li>
-                    </ul>
-                    <% end %>
-                </div>
+  <div data-vc-full-width="true" data-vc-full-width-init="false" class="vc_row wpb_row main-header bg-color main-header2">
+    <div class="container">
+      <div class="wpb_column column_container col-sm-12 col-md-3">
+        <div class="vc_column-inner ">
+          <div class="wpb_wrapper">
+            <div class="logo logo-text">
+              <div class="text-logo">
+                <%= link_to root_path do %>
+                  <ul class="list-inline-block">
+                    <li><%= image_tag "logo-1.png" %></li>
+                    <li>
+                      <h1 class="title24 text-uppercase font-bold white">Pets spa</h1>
+                    </li>
+                  </ul>
+                  <% end %>
               </div>
             </div>
           </div>
         </div>
-          <div class="wrap-menu-search wpb_column column_container col-sm-12 col-md-9">
-            <div class="vc_column-inner ">
-              <div class="wpb_wrapper">
-                <nav class="main-nav  main-nav1 ">
-                  <ul id="menu-main-menu" class="list-none">
-                    <li id="nav-menu-item-826" class="main-menu-item">
-                      <%= link_to t(".home"), root_path, class: "menu-link sub-menu-link" %>
-                    <li id="nav-menu-item-831" class="main-menu-item">
-                      <%= link_to t(".services"), services_path, class: "menu-link sub-menu-link" %>
-                  </li>
-                  <li id="nav-menu-item-829" class="main-menu-item">
-                    <%= link_to t(".posts"), posts_path, class: "menu-link sub-menu-link" %>
-              </li>
-              <li id="nav-menu-item-836" class="main-menu-item">
-                <%= link_to t(".about_us"), "#", class: "menu-link sub-menu-link" %>
-              </li>
-            <li id="nav-menu-item-836" class="main-menu-item">
-              <%= link_to t(".contact_us"), "#", class: "menu-link sub-menu-link" %>
-            </li>
-            <% if logged_in? %>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <%= t ".account" %><b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to t(".profile"), current_user %></li>
-                  <li><%= link_to t(".settings"), edit_user_path(current_user) %></li>
-                  <li class="divider"></li>
-                  <li>
-                    <%= link_to t(".log_out"), logout_path, method: :delete %>
-                  </li>
-                </ul>
-              </li>
-            <% else %>
-              <li id="nav-menu-item-836" class="main-menu-item  menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page">
-                  <%= link_to t(".register"), signup_path %>
-              </li>
-              <li><%= link_to t(".log_in"), login_path %></li>
-            <% end %>
-          </ul>
-          <a href="#" class="toggle-mobile-menu"><span></span></a>
-        </nav>
       </div>
-    </div>
+      <div class="wrap-menu-search wpb_column column_container col-sm-12 col-md-9">
+        <div class="vc_column-inner ">
+          <div class="wpb_wrapper">
+            <nav class="main-nav  main-nav1 ">
+              <ul id="menu-main-menu" class="list-none">
+                <li id="nav-menu-item-826" class="main-menu-item">
+                  <%= link_to t(".home"), root_path, class: "menu-link sub-menu-link" %>
+                </li>
+                <% if current_user.admin? %>
+                <li id="nav-menu-item-826" class="main-menu-item">
+                  <%= link_to t(".admin"), admin_path, class: "menu-link sub-menu-link" %>
+                </li>
+                <% end %>
+                <li id="nav-menu-item-831" class="main-menu-item">
+                  <%= link_to t(".services"), services_path, class: "menu-link sub-menu-link" %>
+                </li>
+              <li id="nav-menu-item-829" class="main-menu-item">
+                <%= link_to t(".posts"), posts_path, class: "menu-link sub-menu-link" %>
+          </li>
+          <li id="nav-menu-item-836" class="main-menu-item">
+            <%= link_to t(".about_us"), "#", class: "menu-link sub-menu-link" %>
+          </li>
+        <li id="nav-menu-item-836" class="main-menu-item">
+          <%= link_to t(".contact_us"), "#", class: "menu-link sub-menu-link" %>
+        </li>
+        <% if logged_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t ".account" %><b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t(".profile"), current_user %></li>
+              <li><%= link_to t(".settings"), edit_user_path(current_user) %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t(".log_out"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li id="nav-menu-item-836" class="main-menu-item  menu-item-even menu-item-depth-0 menu-item menu-item-type-post_type menu-item-object-page">
+              <%= link_to t(".register"), signup_path %>
+          </li>
+          <li><%= link_to t(".log_in"), login_path %></li>
+        <% end %>
+      </ul>
+      <a href="#" class="toggle-mobile-menu"><span></span></a>
+    </nav>
+  </div>
   </div>
   <div class="vc_row-full-width vc_clearfix"></div>
 </header>
