--- a/app/views/layouts/admin/_header.html.erb
+++ b/app/views/layouts/admin/_header.html.erb
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
   <div class="navbar-header">
     <%= link_to t(".title"), admin_path, class: "navbar-brand"%>
+    <%= link_to t(".home"), root_path, class: "navbar-brand"%>
   </div>
   <ul class="nav navbar-top-links navbar-right">
     <li class="nav-item dropdown">
