--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -29,4 +29,7 @@
   <li>
     <h4 class="dashboard"><%= t ".stats" %></h4>
   </li>
+  <li>
+    <%= link_to t(".stat"), admin_stats_path %>
+  </li>
 </ul>
