--- a/app/views/static_pages/_header.html.erb
+++ b/app/views/static_pages/_header.html.erb
@@ -27,7 +27,7 @@
                 <li id="nav-menu-item-826" class="main-menu-item">
                   <%= link_to t(".home"), root_path, class: "menu-link sub-menu-link" %>
                 </li>
-                <% if current_user.admin? %>
+                <% if logged_in? && current_user.admin? %>
                 <li id="nav-menu-item-826" class="main-menu-item">
                   <%= link_to t(".admin"), admin_path, class: "menu-link sub-menu-link" %>
                 </li>
