--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -41,3 +41,53 @@ a.btn-create{
   width: 30%;
   margin-left: 10px;
 }
+.product-thumb img {
+  height: 220px;
+  width: 100%;
+}
+.vc_row.wpb_row.block-product2 {
+  margin-top: -34px;
+}
+.product-type-simple {
+  height: 100%;
+  border: 2px solid #b1abab;
+}
+.vc_row.wpb_row.block-product2 {
+  height: 550px;
+}
+.product-thumb {
+  border: none !important;
+}
+.banner-info {
+  padding-top: 10%;
+}
+.blogs .owl-item.active {
+  width: 33%;
+}
+.post-thumb.banner-advs.zoom-image.overlay-image a img {
+  height: 120px !important;
+}
+.vc_row.wpb_row.block-product2 {
+  background-color: #969390;
+}
+.post-thumb.overlay-image a img {
+  height: 200px;
+  width: 400px;
+}
+.row.services-index {
+  height: 400px;
+  margin: 10px;
+}
+.product-detail {
+  padding-top: 50px;
+}
+.order {
+  height: 460px;
+}
+.order-form {
+  margin-left: 350px;
+}
+.detail-gallery img {
+  width: 100%;
+  height: 300px;
+}
