--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -18,10 +18,10 @@
     <%= link_to t(".likes"), "#" %>
   </li>
   <li>
-    <%= link_to t(".services"), admin_services_url %>
+    <%= link_to t(".services"), admin_services_path %>
   </li>
   <li>
-    <%= link_to t(".orders"), "#" %>
+    <%= link_to t(".orders"), admin_orders_path %>
   </li>
   <li>
     <%= link_to t(".users"), admin_users_path %>
