--- a/app/views/services/_service_home.html.erb
+++ b/app/views/services/_service_home.html.erb
@@ -15,13 +15,10 @@
                   <h3 class="title18 text-uppercase product-title dosis-font font-bold">
                     <%= link_to s.name, service_path(s) %>
                   </h3>
-                  <p class="white"><%= s.description %></p>
+                  <p class="white"><%= truncate(s.description, length: 100) %></p>
                   <div class="product-price simple"><ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">$</span><%= s.price %></span></ins></div>
                 </div>
               </div>
-            </div>
-            <div class="text-right">
-              <%= link_to t(".read_more"), service_path(s) %>
             </div>
           </div>
         </div>
