--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,9 +4,9 @@
   </div>
   <div class="js-content-wrap blog-list-view ">
     <% @posts.each do |p| %>
-    <div class="row">
+    <div class="row services-index">
       <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="post-thumb banner-advs zoom-image overlay-image">
+        <div class="post-thumb overlay-image">
           <%= link_to post_path(p) do %>
             <%= image_tag p.picture.url if p.picture? %>
           <% end %>
