--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,16 +5,12 @@
         <div class="row">
           <div class="col-md-5 col-sm-12 col-xs-12">
             <div class="detail-gallery">
-              <div class="wrap-detail-gallery images zoom-style2">
-                <div class="mid woocommerce-product-gallery__image">
-                  <%= image_tag @post.picture.url if @post.picture? %>
-                </div>
-              </div>
+              <%= image_tag @post.picture.url if @post.picture? %>
             </div>
           </div>
-          <div class="col-md-12s col-sm-12 col-xs-12">
-            <div class="summary entry-summary detail-info">
-              <h2 class="product-title title24 dosis-font font-bold text-uppercase"><%= @post.title %></h2>
+          <div class="col-md-7 col-sm-12 col-xs-12">
+            <div class="summary detail-info">
+              <h2 class="title24 font-bold text-uppercase"><%= @post.title %></h2>
               <p class="price"></p>
               <div class="product-price simple"><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol"></span><%= @post.sumary %></span></div>
             </div>
@@ -28,7 +24,7 @@
         </div>
       </div>
       <hr>
-      <div class="feed-activity-list col-md-8">
+      <div class="feed-activity-list col-md-6">
         <% if logged_in? %>
         <div id="commentform" class="commentform">
            <%= render "comments/form" %>
