--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,53 +1,51 @@
 <% provide(:title, t(".posts")) %>
 <div class="row">
   <div class="col-lg-12">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <%= link_to t(".create"), new_admin_post_path, class: "btn btn-success" %>
-        <%= form_tag(admin_posts_path, method: :get) do %>
-          <%= text_field_tag :term, params[:term]%>
-          <%= submit_tag t(".search"), class: "btn btn-success"%>
-        <% end %>
-        <table width="100%" class="table table-bordered table-hover" id="datatable">
-          <thead>
-            <tr>
-              <th><%= t ".stt" %></th>
-              <th><%= t ".post" %></th>
-              <th><%= t ".content" %></th>
-              <th><%= t ".sumary" %></th>
-              <th><%= t ".status" %></th>
-              <th><%= t ".picture" %></th>
-              <th><%= t ".created_at" %></th>
-              <th colspan="2"><%= t ".action" %></th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @posts.each_with_index do |post,index| %>
-            <tr>
-              <td><%= create_index params[:page], index, Settings.per_page %></td>
-              <td><%= post.title %></td>
-              <td>
-                <%= truncate post.content, length: Settings.display_text%>
-                <%= link_to (t ".read_more"), post %>
-              </td>
-              <td><%= post.sumary %></td>
-              <td><%= post.status %></td>
-              <td><%= image_tag post.picture.url if post.picture? %></td>
-              <td><%= post.created_at %></td>
-              <td>
-                <%= link_to t(".edit"), edit_admin_post_path(post.id),
-                  class: "btn btn-warning" %>
-              </td>
-              <td>
-                <%= link_to t(".delete"), admin_post_path(post.id),
-                method: :delete, data: {confirm: t(".confirm")}, class: "btn btn-danger" %>
-              </td>
-            </tr>
-            <% end %>
-          </tbody>
-        </table>
-        <%= paginate @posts %>
-      </div>
+    <div class="table-toolbar">
+      <%= form_tag admin_posts_path, class: "search", method: :get do %>
+        <%= text_field_tag :term, params[:term], placeholder: t(".title")%>
+        <%= submit_tag t(".search"), class: "btn btn-primary" %>
+      <% end %>
     </div>
+    <%= link_to t(".create"), new_admin_post_path, class: "btn btn-success" %>
+    <table width="100%" class="table table-bordered table-hover" id="datatable">
+      <thead>
+        <tr>
+          <th><%= t ".stt" %></th>
+          <th><%= t ".post" %></th>
+          <th><%= t ".content" %></th>
+          <th><%= t ".sumary" %></th>
+          <th><%= t ".status" %></th>
+          <th><%= t ".picture" %></th>
+          <th><%= t ".created_at" %></th>
+          <th colspan="2"><%= t ".action" %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @posts.each_with_index do |post,index| %>
+        <tr>
+          <td><%= create_index params[:page], index, Settings.per_page %></td>
+          <td><%= post.title %></td>
+          <td>
+            <%= truncate post.content, length: Settings.display_text%>
+            <%= link_to (t ".read_more"), post %>
+          </td>
+          <td><%= post.sumary %></td>
+          <td><%= post.status %></td>
+          <td><%= image_tag post.picture.url if post.picture? %></td>
+          <td><%= post.created_at %></td>
+          <td>
+            <%= link_to t(".edit"), edit_admin_post_path(post.id),
+              class: "btn btn-warning" %>
+          </td>
+          <td>
+            <%= link_to t(".delete"), admin_post_path(post.id),
+            method: :delete, data: {confirm: t(".confirm")}, class: "btn btn-danger" %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <%= paginate @posts %>
   </div>
 </div>
